@@ -7,8 +7,15 @@ Note: Armitage team server setup has changed. Refer to the manual for
 the latest information: http://www.fastandeasyhacking.com/manual#7
 
 - Armitage team mode now routes all Metasploit-bound calls through the
-  deconfliction server. This is necessary to prevent triggering a race
-  condition that was introduced with the changes in Metasploit 4.3.
+  deconfliction server. Armitage also pools "temporary" Metasploit
+  consoles. It's too bad this is logged as one change, because it's 
+  more like twenty. These changes were motivated by a desire to avoid 
+  triggering a race condition that was introduced w/ Metasploit 4.3.0.
+         http://dev.metasploit.com/redmine/issues/6829
+
+  On the bright side these changes will allow a lot more flexibility 
+  to optimize how Armitage interacts with msfrpcd and to do some neat 
+  things (like logging) in a centralized way.
 - Module description (in module launch dialog) is now resizable.
 - Added Ctrl+D keyboard shortcut to close active tab.
 - Armitage now uses (more robust) console queue for launching post
